--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 server.port=9090
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+server.error.include-message=always
