Simple authorization was added for experimentation on api calls. For now there are no errors thrown

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 server.port=9090
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-message=always
+auth0.audience=http://localhost:9090/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://crossfitapp-dev.eu.auth0.com/
