Adding Swagger to the project
Athletes and instructors endpoint documented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 debug:true
+server.port=9090
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${POSTGRES_USERNAME}
 spring.datasource.password=${POSTGRES_PSW}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-server.port=9090
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.error.include-message=always
 auth0.audience=http://localhost:9090/
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://crossfitapp-dev.eu.auth0.com/
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.path=/swagger-ui.html
