--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <image>
+                        <name>ilieskou.crossfit-backend</name>
+                    </image>
+                </configuration>
             </plugin>
 
             <plugin>
