Both postgresql and backend can be dockerized

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 debug=true
 server.port=9090
-spring.datasource.url=jdbc:postgresql://localhost:5432/crossfit_app
-spring.datasource.username=postgres
-spring.datasource.password=t5424D460K
+spring.datasource.url=jdbc:postgresql://localhost:49170/crossfit_app
+spring.datasource.username=docker
+spring.datasource.password=docker
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
